# python-lab

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
reference/: ANTIPATTERNS.md  COMPARISON.md  PATTERNS.md  PYTHONIC_CHEATSHEET.md  STDLIB_MAP.md
